lang/macro/tests/ui/fail/C-01-constructor-self-mut.stderr
error: #[ink(constructor)] functions must not have any kind of `self` receiver
  --> $DIR/C-01-constructor-self-mut.rs:10:25
   |
10 |         fn self_mut_arg(&mut self) -> Self {
   |                         ^^^^^^^^^
